--- a/Html Project/index.html
+++ b/Html Project/index.html
@@ -21,6 +21,16 @@
         <div class="div2">
             <img class="imgwarzone" src="img/warzone.jpg">
             <h2>A Verdadeira Arte de Aprender!</h2>
+            <ul>
+                <li>
+                    <img class="imgm4a1" src="img/m4a1.jpeg">
+                    <h2>Aprenda a Atirar e Mirar com precisão</h2>
+                </li>
+                <li>
+                    <img class="imggranade" src="img/granade.jpeg">
+                    <h2>Aprenda a utilizar Granadas com precisão</h2>
+                </li>
+            </ul>
         </div>
     </main>
 </body>
