--- a/Html Project/index.html
+++ b/Html Project/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A loxinha do Bandeclay</title>
-    <link rel="icon" href="img/salgado.jpeg">
+    <title>Governo do Paraná</title>
+    <link rel="icon" href="https://web.celepar.pr.gov.br/drupal/images/logo_parana_225x66.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,15 +23,30 @@
             <h2>A Verdadeira Arte de Aprender!</h2>
             <ul>
                 <li>
-                    <img class="imgm4a1" src="img/m4a1.jpeg">
+                    <img class="imggranade" src="img/m4a1.jpeg">
                     <h2>Aprenda a Atirar e Mirar com precisão</h2>
                 </li>
                 <li>
                     <img class="imggranade" src="img/granade.jpeg">
-                    <h2>Aprenda a utilizar Granadas com precisão</h2>
+                    <h2>Aprenda a utilizar Granadas com Maestria e Agilidade</h2>
+                </li>
+                <li>
+                    <img class="imggranade" src="img/carro.jpeg">
+                    <h2>Tus tens oque é necessario para dirigir este veiculo?</h2>
                 </li>
             </ul>
         </div>
     </main>
+    <footer>
+        <img class="imglogo" src="https://web.celepar.pr.gov.br/drupal/images/logo_parana_113x99_texto_branco.png">
+        <p class="copyright">
+
+            &copy; Secretaria da Educação
+            
+            Av. Água Verde, 2140 - Vila Izabel
+            80240-900 - Curitiba - PR - Localização
+            41 3340-1500
+            </p>
+    </footer>
 </body>
 </html>
